Add server backend logic
